# Dum-E

./: .gitignore  README.md  pyproject.toml  run_sim.sh
docs/: setpoints.md
docs/superpowers/specs/: 2026-06-02-so101-ik-controller-design.md  2026-06-15-dume-perception-learning-sim-design.md  2026-06-18-dume-control-remap-and-limit-aware-ik-design.md
src/dume/: __init__.py  _placo_fix.py  arducam.py  arm.py  camera.py  cli.py  config.py  controller.py  dataset.py  flown_stereo.py  geometry.py  input_keyboard.py  input_xbox.py  kinematics.py  padview.py  planning.py  policy.py  poses.py  service.py  sim_world.py
tests/: test_camera.py  test_control_smoothing.py  test_controller.py  test_dataset.py  test_flown_stereo.py  test_geometry.py  test_input.py  test_input_keyboard.py  test_jointposes.py  test_kinematics.py  test_padview.py  test_planning.py  test_policy.py  test_port.py  test_sim_grasp.py  test_sim_integration.py  test_sim_world.py
