[project]
name = "dume"
version = "0.1.0"
description = "Smooth, intuitive inverse-kinematics controller for the LeRobot SO-101 arm"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lerobot[feetech,kinematics,gamepad]>=0.5.1",
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
dume = "dume.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dume"]

[tool.pytest.ini_options]
testpaths = ["tests"]
